Fixed issue: Removed letter spacing for bulk delete list

--- a/media/css/cerber.css
+++ b/media/css/cerber.css
@@ -992,7 +992,6 @@ div.help:after {
 
 .bulk-delete li {
 	font-weight: 800;
-	letter-spacing: 2px;
 }
 
 
